Progress on data chapter

--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-04-speed.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-04-speed.mdx
@@ -71,6 +71,11 @@ Your average speed is 44.57142857142857 km/h
     }
     ```
 
+    :::tip[Want to format the double to show only 2 decimal places?]
+    The `to_string` function accepts a precision argument used to perform this. Switch the last line of code to: `write_line("Your average speed is " + to_string(speed, 2) + " km/h");`
+    :::
+
+
       </AccordionItem>
     </Accordion>
 
