--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-05-wrap-up.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-05-wrap-up.mdx
@@ -74,7 +74,7 @@ Make sure to test your program and make sure that the values output are correct.
 
 :::note
 
-Building this all in steps is **very** important! There is lots going on in the code, so at the start you don't want to plan too far ahead. As you gain more practice and experience you can then start to design larger part of the code, but you still end up coding it a little at a time and adjusting your plans as you go.
+Building this all in steps is **very** important! There is lots going on in the code, so at the start you don't want to plan too far ahead. As you gain more practice and experience you can then start to design larger parts of the code, but you still end up coding it a little at a time and adjusting your plans as you go.
 
 :::
 
