--- a/src/content/docs/book/part-1-instructions/2-data/5-reference/11-assignment-statement.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/5-reference/11-assignment-statement.mdx
@@ -96,7 +96,7 @@ export const sliderImagesAssignInt = [
     listType: "ul",
     tips: [
       "Instruction 3a will evaluate the right-hand side of the assignment statement.",
-      "This comes to 21, which is loaded into the CPU. The compiler decided to put it in register 1."
+      "This is just the value 21, so no calculations are required."
     ]
   }
   ,
@@ -117,7 +117,6 @@ export const sliderImagesAssignInt = [
     listType: "ul",
     tips: [
       "3b saves the result of the expression to 'dividend'.",
-      "As the value of the expression is stored in Register 1, 3b copies it to memory.",
       "So, the value 21 is <span class='boldunderline'>stored</span> in the location of the dividend variable."
     ]
   }
@@ -144,22 +143,22 @@ export const sliderImagesAssignInt = [
   ,
   {
     src: Slide12int.src,
-    altText: "Let's run through it quickly: 4a: loads 4 into Register 1 (replacing the old value 21). 4b: save the result (in Register 1) into the 'divisor' variable on the stack memory. 4c: The program counter is incremented to line 5",
+    altText: "Let's run through it quickly: 4a. The expression in this case is just the value 4, so it can simply be saved into the variable.",
     tipStart: 12,
     listType: "ul",
     tips: [
-      "Let's run through it quickly:<ul><li>4a: evaluates the expression and loads 4 into Register 1 (replacing the old value 21).</li><li>4b: store the result (from Register 1) in the 'divisor' variable.</li><li>4c: The program counter is incremented to line 5.</li></ul>"
+      "Let's run through it quickly:<ul><li>4a: evaluates the expression - in this case it the value 4.</li><li>4b: store the result of calculating the expression into the 'divisor' variable.</li><li>4c: The program counter is incremented to line 5.</li></ul>"
     ]
   }
   ,
   {
     src: Slide13int.src,
-    altText: "How does the division operator work? Again, remember, assignment = two actions: evaluate (the right hand side expression) and save (into the left hand variable). For division, evaluate will need a few actions - Load the variables (5a and 5b) and do the division (5c)",
+    altText: "How does the division operator work? Again, remember, assignment = two actions: evaluate (the right-hand side expression) and save (into the left-hand variable). For division, evaluate will need a few actions - Load the variables (5a and 5b) and do the division (5c)",
     tipStart: 13,
     listType: "ul",
     tips: [
       "Line 5 is another assignment statement, but this time with a division operator in the expression.",
-      "Remember that assignment requires two actions: <span class='boldunderline'>evaluate</span> (the right hand side expression) and <span class='boldunderline'>store</span> (into the left hand variable).",
+      "Remember that assignment requires two actions: <span class='boldunderline'>evaluate</span> (the right-hand side expression) and <span class='boldunderline'>store</span> (into the left-hand variable).",
       "For division, the <span class='boldunderline'>evaluate</span> part will need a few steps: load the variables (5a and 5b), and do the division (5c)."
     ]
   }
@@ -170,19 +169,17 @@ export const sliderImagesAssignInt = [
     tipStart: 14,
     listType: "ul",
     tips: [
-      "5a and 5b are basically the same - they each read a value from memory into a CPU register.</ul>"
+      "To calculate the expression, the values are loaded (5a and 5b).</ul>"
     ]
   }
   ,
   {
     src: Slide15int.src,
-    altText: "The CPU does the division (Register 1 / Register 2). This is integer division, so 21/4 = 5. The result of this instruction is stored in it's own register (Register 3 here)",
+    altText: "The CPU performs the integer division, so 21 / 4 = 5. The result of the expression is stored in a register (Register 3 here)",
     tipStart: 15,
     listType: "ul",
     tips: [
-      "Step 5c is the division operation.",
-      "The CPU reads the values from the registers and stores the result of the division (Register 1 / Register 2) in Register 3.",
-      "This is integer division, so 21/4 = 5.",
+      "The integer division is performed (21 / 4 = 5)",
     ]
   }
   ,
@@ -192,22 +189,20 @@ export const sliderImagesAssignInt = [
     tipStart: 16,
     listType: "ul",
     tips: [
-      "Step 5d is the <span class='boldunderline'>store</span> part of the assignment statement.",
-      "The result is in Register 3, so it is saved to the 'quotient' variable in memory.",
+      "The result is <span class='boldunderline'>stored</span> in the 'quotient' variable.",
       "Assignment done...add one to the program counter!"
     ]
   }
   ,
   {
     src: Slide17int.src,
-    altText: "Argh... lots of steps here ! We must evaluate the arguments to pass to WriteLine. 6a: Load dividend 6b: Convert to string 6c: Load '/' 6d: Append 6e: Load divisor 6f: Convert to string 6g: Append 6h: Load '=' 6i: Append 6j: Load quotient 6k: Convert to string 6l: Append. Result is '21/4=5'. Result passed to WriteLine(k) which outputs it to the terminal",
+    altText: "Argh... lots of steps here ! We must evaluate the arguments to pass to write_line. 6a: Load dividend 6b: Convert to string 6c: Load '/' 6d: Append 6e: Load divisor 6f: Convert to string 6g: Append 6h: Load '=' 6i: Append 6j: Load quotient 6k: Convert to string 6l: Append. Result is '21/4=5'. Result passed to write_line(k) which outputs it to the terminal",
     tipStart: 17,
     listType: "ul",
     tips: [
-      "Argh...lots of steps here!",
-      "We must evaluate the arguments to pass to WriteLine:<ul><li>6a: Load 'dividend' variable.</li> <li>6b: Convert the dividend value to string.</li> <li>6c: Load the string literal '/'.</li> <li>6d: Append '/' to the overall string.</li> <li>6e: Load 'divisor' variable.</li> <li>6f: Convert the divisor value to string.</li> <li>6g: Append this value to the overall string.</li> <li>6h: Load the string literal '='.</li> <li>6i: Append '=' to the overall string.</li> <li>6j: Load the 'quotient' variable.</li> <li>6k: Convert the quotient value to string.</li> <li>6l: Append this value to the overall string.</li></ul>",
-      "Overall argument value is '21/4=5'.",
-      "Argument is passed to WriteLine, which outputs it to the terminal."
+      "There are lots of steps here evaluating the argument passed to write_line.",
+      "Loading 'dividend', then converting it to a string, then loading and appending the string literal ' / ', and so on...",
+      "Overall argument value is the string '21 / 4 = 5'.",
     ]
   }
   ,
@@ -234,19 +229,19 @@ export const sliderImagesAssignDouble = [
   },
   {
     src: Slide2double.src,
-    altText: "The right hand.",
+    altText: "The right-hand.",
     tipStart: 3,
     tips: [
-      "To <span class='boldunderline'>evalulate</span> the right hand side expression, the CPU needs to first <span class='boldunderline'>load</span> the dividend and divisor from the stack into registers (5a, 5b).",
-      "To perform the <span class='boldunderline'>division</span> (5c):<ul><li>The CPU calculates the value of register 1 / register 2.</li><li>Although the divisor and dividend are both integers, the result is to be stored in a double, and so the CPU stores the result, 5.25, as a double in register 3.</li></ul>"
+      "To <span class='boldunderline'>evalulate</span> the right-hand side expression, the CPU needs to first <span class='boldunderline'>load</span> the dividend and divisor (5a, 5b).",
+      "Next it performs the <span class='boldunderline'>division</span> (5c), with the result 5.25.</li></ul>"
     ]
   },
   {
     src: Slide3double.src,
-    altText: "The result of the evaluation of the right hand side, is saved into the variable on the left hand side of the assignment operator.",
+    altText: "The result of the evaluation of the right-hand side, is saved into the variable on the left-hand side of the assignment operator.",
     tipStart: 5,
     tips: [
-      "The final part of the assignment statement is to <span class='boldunderline'>store</span> the result of evaluating the expression on the right hand side into the variable on the left hand side ('quotient') (5d)."
+      "The final part of the assignment statement is to <span class='boldunderline'>store</span> the result of evaluating the expression on the right-hand side into the variable on the left-hand side ('quotient') (5d)."
     ]
   },
   {
@@ -255,7 +250,7 @@ export const sliderImagesAssignDouble = [
     tipStart: 6,
     tips: [
       "Once the assignment is done, the CPU increments the program counter ready for the next instruction.",
-      "This is the same as the previous example."
+      "This is the same as the previous example, but will now output the double value."
     ]
   }
 ];
@@ -268,8 +263,8 @@ The assignment statement performs two actions. First, it calculates the value of
 
 ## Assignment Statement -- when, why, and how
 
-When you create a variable, you have identified a piece of information that you want to be able to change as your program runs.
-Whenever you need to give a variable an initial or new value, you use an **assignment statement**.
+You will have created a variable as you have identified a piece of information that you want to be able to change as your program runs.
+Whenever you have a new value, you update the variable by using an **assignment statement**.
 
 The assignment statement uses the **assignment operator** `=`.
 Whatever is on the right-hand side of `=` represents the value to be assigned.
@@ -277,18 +272,32 @@ This could be a [literal](/book/part-1-instructions/1-sequence/5-reference/05-li
 On the left-hand side you write the identifier of the variable you want to store this value in.
 
 For example, you might decide to ask the user for their name.
-First, you need a variable to store the value.
+We do not know the value of this at the start of the program, so it is something that will change.
+To manage this, you need a variable to store the value.
 You might decide to call this variable `name`.
-Then, the assignment statement lets you read a response from the user and store it in that variable.
+Then, you can use an assignment statement to read a response from the user and store it in the variable.
 In this case, the **right-hand side** of the assignment would be a call to `read_line`, which reads input from [standard in](/book/appendix/2-computer-use/2-trailside/09-streams/#standard-input-stdin) and returns it to you.
-The **left-hand side** would be the identifier of our variable, `name`.
+The **left-hand side** would be the identifier of our variable, `name`. Something like this:
+
+```c++
+// Create the variable
+string name;
+
+// Call read line and store the result in name
+name = read_line();
+```
 
 It is important to remember that every assignment statement has **2 actions**:
 
 1. Calculate the value on the right-hand side
 2. Store it in the variable on the left-hand side.
 
-The ordering of these actions allow you to update the value of a variable using an expression involving the variable being updated. This can be very useful. For example, you might want to update the value of a variable storing the number of steps you have taken today.
+The ordering of these actions allow you to update the value of a variable using an expression involving the variable being updated. This can be very useful. For example, you might want to update the value of a variable storing the number of steps you have taken today. For example, the following code created count and then updates its value.
+
+```c++
+int count = 0;
+count = count + 1;
+```
 
 ## In C++
 
@@ -297,14 +306,35 @@ The ordering of these actions allow you to update the value of a variable using 
 <CommmonLink type="syntaxDiagramGuide"/>
 :::
 
-In C++ the assignment operator is `=`.
-Most assignment statements are written using `=`, with an identifier on the left-hand side and an [expression](/book/part-1-instructions/1-sequence/5-reference/05-expression) on the right-hand side.
-The assignment operator can optionally be modified with `+`, `-`, `*`, or `/`, which are shorthands for adding to, subtracting from, multiplying, and dividing the variable identified on the left-hand side of the statement.
+In C++ the assignment operator is `=`, with an identifier on the left-hand side and an [expression](/book/part-1-instructions/1-sequence/5-reference/05-expression) on the right-hand side.
+
+The assignment operator can optionally be modified with `+`, `-`, `*`, or `/`, which are shorthand for adding to, subtracting from, multiplying, and dividing the variable identified on the left-hand side of the statement.
+
+```c++
+int count = 0;
+
+// The following is the same as count = count + 1;
+count += 1;
+```
 
 Some assignment statements are written without `=`.
 These are assignment statements using increment (`++`) or decrement (`--`), which allow you to add or remove one from a variable's current value.
 
 For example, `x = x - 1`, `x -= 1`, and `x--` are all assignment statements which do the same thing -- assign the variable `x` a new value that is one lower than its current value.
+
+```c++
+int count = 10;
+
+count = count - 1;
+
+\\ is the same as
+
+count -= 1;
+
+\\ is the same as
+
+count--;
+```
 
 ## Examples
 
@@ -335,7 +365,7 @@ int main()
 
 ### Shorthand assignment statements
 
-The following code shows an example of how to use some of the shorthand assignment statements.
+The following code shows an example of how to use the shorthand assignment statements.
 
 ```c++
 #include "splashkit.h"
@@ -400,33 +430,11 @@ After count += 5...count is now 23
 After count++...count is now 24
 ```
 
-You do not always need to store values in variables. Sometimes you can just use the value and then forget it. For example, in the above code, we read the initial count from the user. This requires us to read it as text, and then convert that text to a number. Given that we do not ever use the details in `line` again, we do not need to create this variable in the first place. Instead, we could pass the value to the convert function directly as shown below.
-
-```c++
-#include "splashkit.h"
-
-int main()
-{
-    int count;
-
-    write("What is the start count: ");
-
-    // Initialise the count to a user provided value.
-    //
-    //       Instead of storing in line and using it here, we can call
-    //       read_line and pass its result to to_integer directly.
-    //               |
-    //               v
-    count = to_integer(read_line());
-
-    //... the rest of the code would be the same
-}
-```
-
 ## Assignment statement up close
 
 The following sliders show how the assignment statement works in detail.
 These are both relatively simple programs, but notice how much is going on behind the scenes!
+The good thing is that you do not need to think overly about these smaller steps, as long as you remember that the assignment statement works by evaluating the expression on the right-hand side of the `=` and then stores the result in the variable on the left-hand side.
 
 ### Assigning an int division result to an int variable
 
@@ -436,15 +444,11 @@ These are both relatively simple programs, but notice how much is going on behin
 
 <MySwiper client:only height="" images={sliderImagesAssignDouble}></MySwiper>
 
-## Activities
-
-[TODO]
-
 :::note[Summary]
 
 - An assignment statement is an **instruction** you can get the computer to perform.
 - The assignment statement uses an **assignment operator**.
-- The right-hand side of the assignment operator is an [expression](/book/part-1-instructions/1-sequence/5-reference/05-expression) representing the value to be stored.
+- The right-hand side of the assignment operator is an [expression](/book/part-1-instructions/1-sequence/5-reference/05-expression) calculating the value to be stored.
 - The left-hand side of the assignment operator is the [variable](/book/part-1-instructions/2-data/5-reference/07-variable/) into which the value is stored.
 - When the assignment statement is executed the expression is evaluated first, and then the resulting value is stored in the variable.
 - The variable on the left-hand side of the assignment operator can be used as part of the expression on the right-hand side.
